<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RingyDingyDingy</string>
    <string name="device_admin_prompt">RingyDingyDingy needs device administration privileges to enable remote locking. Please accept this if you want to lock your device remotely.</string>
    <string name="ok">OK</string>
    <string name="log_already_empty">The activation log is already empty.</string>
    <string name="log_clear_prompt">Are you sure you want to clear the activation log?</string>
    <string name="log_empty">The activation log is empty.</string>
    <string name="log_label">Activation Log Viewer</string>
    <string name="main_header">To perform a remote ring, send:\n\&quot;rdd &lt;code&gt; ring\&quot;\nto this device, without quotes.\n\nYou can stop a remote ring by replacing \&quot;ring\&quot; with \&quot;stop\&quot;&lt;remote_lock&gt;\n\n&lt;pager&gt;\n\n&lt;log&gt;\n\nTo change your activation code, available commands, and enabled triggers (ways to send commands to RingyDingyDingy)&lt;settings&gt;</string>
    <string name="main_header_log_disabled">Activation logging is currently disabled.</string>
    <string name="main_header_log_enabled">Activation logging is enabled. To see the activation log, &lt;instructions&gt;</string>
    <string name="main_header_log_instructions_default">press Menu and tap View Log.</string>
    <string name="main_header_log_instructions_holo">tap the View icon on the action bar.</string>
    <string name="main_header_pager_disabled">Pager is currently disabled.</string>
    <string name="main_header_pager_enabled">To send a page to this device, send:\n\&quot;&lt;pager_code&gt; (message to display)\&quot;</string>
    <string name="main_header_remote_lock_disabled">.\n\nRemote locking is currently disabled.</string>
    <string name="main_header_remote_lock_enabled">, or remotely lock your device by replacing it with \&quot;lock\&quot;.</string>
    <string name="main_header_settings_default">, press Menu and tap Settings.</string>
    <string name="main_header_settings_holo">, tap the Settings icon on the action bar.</string>
    <string name="menu_clear">Clear Log</string>
    <string name="menu_log">View Log</string>
    <string name="menu_settings">Settings</string>
    <string name="notification_default_title">Enable/disable RingyDingyDingy</string>
    <string name="notification_disabled">RingyDingyDingy disabled</string>
    <string name="notification_disabled_message">Tap to enable RingyDingyDingy</string>
    <string name="notification_enabled">RingyDingyDingy enabled</string>
    <string name="notification_enabled_message">Tap to disable RingyDingyDingy</string>
    <string name="page_from">Page from</string>
    <string name="permission_handle_command_description">Allows the application to add new commands to RingyDingyDingy.</string>
    <string name="permission_handle_command_label">add new RingyDingyDingy commands</string>
    <string name="permission_handle_internal_command_description">Used exclusively by RingyDingyDingy for internal commands.</string>
    <string name="permission_handle_internal_command_label">add internal RingyDingyDingy commands</string>
    <string name="permission_execute_command_description">Allows the application to execute RingyDingyDingy commands.</string>
    <string name="permission_execute_command_label">execute RingyDingyDingy commands</string>
    <string name="preferences_activation_code">Activation code</string>
    <string name="preferences_enable">Enable RingyDingyDingy</string>
    <string name="preferences_general">General settings</string>
    <string name="preferences_notification">Show toggle notification</string>
    <string name="preferences_notification_disable_summary">Tap to hide a notification that lets you quickly enable/disable RingyDingyDingy</string>
    <string name="preferences_notification_enable_summary">Tap to show a notification that lets you quickly enable/disable RingyDingyDingy</string>
    <string name="preferences_log">Enable activation logging</string>
    <string name="preferences_log_disable_summary">Tap to disable logging when a command is activated, who activated it, and what app was used</string>
    <string name="preferences_log_enable_summary">Tap to enable logging when a command is activated, who activated it, and what app was used</string>
    <string name="preferences_log_max_entries">Maximum log size</string>
    <string name="preferences_log_max_entries_summary">Tap to change the maximum number of log entries to keep (currently &lt;count&gt;)</string>
    <string name="preferences_logging">Activation logging</string>
    <string name="preferences_pager">Pager</string>
    <string name="preferences_pager_code">Set pager code</string>
    <string name="preferences_pager_error">Sorry, your code wasn\'t valid. It cannot contain spaces. Please try again.</string>
    <string name="preferences_pager_code_message">Enter a new pager activation code below. Note that it cannot contain spaces.</string>
    <string name="preferences_pager_code_summary">Tap to set a new pager activation code</string>
    <string name="preferences_pager_code_title">Enter New Pager Code</string>
    <string name="preferences_pager_disable_summary">Tap to disable receiving pages (uses a separate activation code)</string>
    <string name="preferences_pager_enable_summary">Tap to enable receiving pages (uses a separate activation code)</string>
    <string name="preferences_remote_control">Remote commands</string>
    <string name="preferences_remote_lock_title">Remote locking</string>
    <string name="preferences_remote_lock_disable_summary">Tap to disable remote locking</string>
    <string name="preferences_remote_lock_enable_summary">Tap to enable remote locking</string>
    <string name="preferences_remote_lock_needs_froyo">Requires Android 2.2 (Froyo) or newer</string>
    <string name="preferences_remote_lock_warning">Please note that you MUST deactivate remote locking before uninstalling RingyDingyDingy! Keeping it active will give the error \&quot;Uninstall not successful.\&quot;</string>
    <string name="preferences_ringtone_title">Select ringtone</string>
    <string name="preferences_ringtone_summary">Default ringtone</string>
    <string name="preferences_ringtone_unknown">Unknown ringtone</string>
    <string name="preferences_generate_code_dialog_text">Your new activation code is:\n&lt;code&gt;</string>
    <string name="preferences_generate_code_summary">Tap to generate a new random code</string>
    <string name="preferences_generate_code_title">Generate new code</string>
    <string name="preferences_google_voice_trigger_disable_summary">Tap to disable Google Voice activation</string>
    <string name="preferences_google_voice_trigger_enable_summary">Tap to enable Google Voice activation</string>
    <string name="preferences_google_voice_trigger_needs_app">Requires the Google Voice app</string>
    <string name="preferences_google_voice_trigger_title">Google Voice</string>
    <string name="preferences_send_sms_replies_disable_summary">Tap to disable sending replies to text messages</string>
    <string name="preferences_send_sms_replies_enable_summary">Tap to enable sending replies to text messages</string>
    <string name="preferences_send_sms_replies_title">Send SMS replies</string>
    <string name="preferences_set_code_dialog_message">Please enter your new activation code. It must be between four and eight characters (letters, numbers, and symbols) long and cannot contain spaces. Please note that anyone with access to your device can view your code at any time, so don\'t use anything secret like a PIN code!</string>
    <string name="preferences_set_code_dialog_title">Enter New Activation Code</string>
    <string name="preferences_set_code_error">Sorry, your code wasn\'t valid. It must be between four and eight characters (letters, numbers, and symbols) long and cannot contain spaces.</string>
    <string name="preferences_set_code_summary">Tap to type in your own activation code</string>
    <string name="preferences_set_code_title">Manually set code</string>
    <string name="preferences_sms_trigger_disable_summary">Tap to disable SMS activation</string>
    <string name="preferences_sms_trigger_enable_summary">Tap to enable SMS activation</string>
    <string name="preferences_sms_trigger_title">Text messages (SMS)</string>
    <string name="preferences_triggers">Triggers</string>
    <string name="remote_ring_stop_button">Stop</string>
    <string name="remote_ring_text">Remote ring has been initiated by</string>
    <string name="settings_label">Settings</string>
    <string name="sms_help">Send \&quot;RingyDingyDingy &lt;code&gt; &lt;cmd&gt;\&quot;. &lt;cmd&gt; is one of: help, lock, ring, stop.</string>
    <string name="sms_lock_needs_froyo">Sorry, but I can\'t do a remote lock. Remote locking needs Android 2.2 (Froyo) or newer.</string>
    <string name="sms_lock_needs_permission">Sorry, but I can\'t do a remote lock. Remote locking is disabled.</string>
    <string name="sms_lock_success">Device locked!</string>
    <string name="sms_page_disabled">Sorry, pages are disabled.</string>
    <string name="sms_page_success">Your page has been sent successfully.</string>
    <string name="sms_ring_success">The remote ring has been initiated. Send \&quot;RingyDingyDingy &lt;code&gt; stop\&quot; to stop the remote ring.</string>
    <string name="sms_ring_was_ringing">Sorry, but I can\'t start a remote ring. A remote ring has already been initiated.</string>
    <string name="sms_stop_success">The remote ring has been stopped.</string>
    <string name="sms_stop_was_not_ringing">Sorry, but I can\'t stop the remote ring. No remote ring was initiated.</string>
    <string name="sms_success">Command successful.</string>
    <string name="sms_unknown_command">Unknown command. Please send \&quot;RingyDingyDingy &lt;code&gt; help\&quot; for a list of commands.</string>
    <string name="sms_unknown_error">Unknown error.</string>
    <string name="your_activation_code">Your activation code is:</string>
</resources>
